--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,31 +1,22 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
-
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: [push]
 
 jobs:
-
   build:
+    name: Build
     runs-on: ubuntu-latest
+    container:
+      image: golang:1.20
+      env:
+        GOPATH: /__w/AdamShannag/go/
     steps:
-    - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1
       with:
-        go-version: 1.20
-        
-    - name: Install dependencies
-      run: go get github.com/AdamShannag/jot
-
-    - name: Build
-      run: go build -v ./...
+        fetch-depth: 1
+        path: go/src/github.com/AdamShannag/jot
 
     - name: Test
-      run: go test -v ./...
+      run: |
+        go test -cover $(go list ./... | grep -v /vendor/)
