--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,22 +1,25 @@
 name: Go
-on: [push]
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    container:
-      image: golang:1.20
-      env:
-        GOPATH: /__w/AdamShannag/go/
-    steps:
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
       with:
-        fetch-depth: 1
-        path: go/src/github.com/AdamShannag/jot
+        go-version: '1.20'
+
+    - name: Build
+      run: go build -v ./...
 
     - name: Test
-      run: |
-        go test -cover $(go list ./... | grep -v /vendor/)
+      run: go test -v ./...
