--- a/.github/workflows/increment.yml
+++ b/.github/workflows/increment.yml
@@ -1,7 +1,7 @@
 name: Creation of Release Version
 on:
   pull_request:
-    branches: [master]
+    branches: ["master"]
     types:
       - closed
 
