--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -22,11 +22,11 @@ jobs:
         id: versioning
         uses: PaulHatch/semantic-version@v5.0.3
         with:
-          branch: main
+          branch: master
           tag_prefix: "v"
           major_pattern: "BREAKING CHANGE:"
           minor_pattern: "feat:"
-          format: "v${major}.${minor}.${patch}-prerelease${increment}"
+          version_format: "v${major}.${minor}.${patch}-prerelease${increment}"
           
       - name: Create Release
         if: ${{ !startsWith(github.ref, 'refs/tags/') }}
