--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,9 @@ jobs:
           go-version: "1.20"
 
       - name: Test
-        run: go test -v ./v2/...
+        run: |
+          cd v2
+          go test -v ./...
 
   build:
     needs: test
@@ -32,4 +34,6 @@ jobs:
           go-version: "1.20"
 
       - name: Build
-        run: go build -v ./v2/...
+        run: |
+          cd v2
+          go test -v ./...
